.antlr/ExprParser.java
// Generated from /Users/mannpatel/Desktop/CPSC-499/ExprParser.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class ExprParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WhiteSpace=1, Comment=2, Abstract=3, Assert=4, Boolean=5, Break=6, Byte=7, 
		Case=8, Catch=9, Char=10, Class=11, Const=12, Continue=13, Default=14, 
		Do=15, Double=16, Else=17, Extends=18, Final=19, Finally=20, Float=21, 
		For=22, Goto=23, If=24, Implements=25, Import=26, InstanceOf=27, Int=28, 
		Interface=29, Long=30, Native=31, New=32, Package=33, Private=34, Protected=35, 
		Public=36, Return=37, Short=38, Static=39, Strictfp=40, Super=41, Switch=42, 
		Synchronized=43, This=44, Throw=45, Throws=46, Transient=47, Try=48, Void=49, 
		Volatile=50, While=51, Dot=52, IntegerLiteral=53, FloatingPointLiteral=54, 
		CharacterLiteral=55, StringLiteral=56, BooleanLiteral=57, NullLiteral=58, 
		ParenthesesLeft=59, ParenthesesRight=60, CurlyBracketLeft=61, CurlyBracketRight=62, 
		SquareBracketLeft=63, SquareBracketRight=64, Semicolon=65, Comma=66, UnsignedRightShiftAssign=67, 
		EqualTo=68, NotEqualTo=69, LessThanEqualTo=70, GreaterThanEqualTo=71, 
		ConditionalAND=72, ConditionalOR=73, Increment=74, Decrement=75, LeftShift=76, 
		SignedRightShift=77, UnsignedRightShift=78, AddAssign=79, SubtractAssign=80, 
		MultiplyAssign=81, DivideAssign=82, BitwiseANDAssign=83, BitwiseORAssign=84, 
		BitwiseXORAssign=85, RemainderAssign=86, LeftShiftAssign=87, SignedRightShiftAssign=88, 
		Assignment=89, BitwiseComplement=90, LessThan=91, GreaterThan=92, LogicalComplement=93, 
		Question=94, Colon=95, Addition=96, Subtraction=97, Multiplication=98, 
		Division=99, BitwiseAND=100, BitwiseOR=101, BitwiseXOR=102, Remainder=103, 
		IDENTIFIER=104;
	public static final int
		RULE_prog = 0, RULE_identifier = 1, RULE_qualifiedIdentifier = 2, RULE_literal = 3, 
		RULE_expression = 4, RULE_conditionalExpr = 5, RULE_logicalOrExpr = 6, 
		RULE_logicalAndExpr = 7, RULE_equalityExpr = 8, RULE_relationalExpr = 9, 
		RULE_additiveExpr = 10, RULE_multiplicativeExpr = 11, RULE_unaryExpr = 12, 
		RULE_postfixExpr = 13, RULE_primaryExpr = 14, RULE_assignmentOperator = 15, 
		RULE_type = 16, RULE_statementExpression = 17, RULE_constantExpression = 18, 
		RULE_identifierSuffix = 19, RULE_postfixOp = 20, RULE_primitiveType = 21, 
		RULE_argumentsOpt = 22, RULE_arguments = 23, RULE_bracketsOpt = 24, RULE_creator = 25, 
		RULE_innerCreator = 26, RULE_arrayCreatorRest = 27, RULE_classCreatorRest = 28, 
		RULE_arrayInitializer = 29, RULE_variableInitializer = 30, RULE_parExpression = 31, 
		RULE_block = 32, RULE_blockStatements = 33, RULE_blockStatement = 34, 
		RULE_localVariableDeclarationStatement = 35, RULE_statement = 36, RULE_statementIncompleteIf = 37, 
		RULE_completeIf = 38, RULE_catches = 39, RULE_catchClause = 40, RULE_switchStatement = 41, 
		RULE_switchBlockStatementGroups = 42, RULE_switchBlockStatementGroup = 43, 
		RULE_switchLabel = 44, RULE_moreStatementExpressions = 45, RULE_forInit = 46, 
		RULE_forUpdate = 47, RULE_modifiersOpt = 48, RULE_modifier = 49, RULE_variableDeclarators = 50, 
		RULE_variableDeclaratorsRest = 51, RULE_constantDeclaratorsRest = 52, 
		RULE_variableDeclarator = 53, RULE_constantDeclarator = 54, RULE_variableDeclaratorRest = 55, 
		RULE_constantDeclaratorRest = 56, RULE_variableDeclaratorId = 57, RULE_compilationUnit = 58, 
		RULE_importDeclaration = 59, RULE_typeDeclaration = 60, RULE_classOrInterfaceDeclaration = 61, 
		RULE_classDeclaration = 62, RULE_interfaceDeclaration = 63, RULE_typeList = 64, 
		RULE_classBody = 65, RULE_interfaceBody = 66, RULE_classBodyDeclaration = 67, 
		RULE_memberDecl = 68, RULE_methodOrFieldDecl = 69, RULE_methodOrFieldRest = 70, 
		RULE_interfaceBodyDeclaration = 71, RULE_interfaceMemberDecl = 72, RULE_interfaceMethodOrFieldDecl = 73, 
		RULE_interfaceMethodOrFieldRest = 74, RULE_methodDeclaratorRest = 75, 
		RULE_voidMethodDeclaratorRest = 76, RULE_interfaceMethodDeclaratorRest = 77, 
		RULE_voidInterfaceMethodDeclaratorRest = 78, RULE_constructorDeclaratorRest = 79, 
		RULE_qualifiedIdentifierList = 80, RULE_formalParameters = 81, RULE_formalParameter = 82, 
		RULE_methodBody = 83;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "identifier", "qualifiedIdentifier", "literal", "expression", 
			"conditionalExpr", "logicalOrExpr", "logicalAndExpr", "equalityExpr", 
			"relationalExpr", "additiveExpr", "multiplicativeExpr", "unaryExpr", 
			"postfixExpr", "primaryExpr", "assignmentOperator", "type", "statementExpression", 
			"constantExpression", "identifierSuffix", "postfixOp", "primitiveType", 
			"argumentsOpt", "arguments", "bracketsOpt", "creator", "innerCreator", 
			"arrayCreatorRest", "classCreatorRest", "arrayInitializer", "variableInitializer", 
			"parExpression", "block", "blockStatements", "blockStatement", "localVariableDeclarationStatement", 
			"statement", "statementIncompleteIf", "completeIf", "catches", "catchClause", 
			"switchStatement", "switchBlockStatementGroups", "switchBlockStatementGroup", 
			"switchLabel", "moreStatementExpressions", "forInit", "forUpdate", "modifiersOpt", 
			"modifier", "variableDeclarators", "variableDeclaratorsRest", "constantDeclaratorsRest", 
			"variableDeclarator", "constantDeclarator", "variableDeclaratorRest", 
			"constantDeclaratorRest", "variableDeclaratorId", "compilationUnit", 
			"importDeclaration", "typeDeclaration", "classOrInterfaceDeclaration", 
			"classDeclaration", "interfaceDeclaration", "typeList", "classBody", 
			"interfaceBody", "classBodyDeclaration", "memberDecl", "methodOrFieldDecl", 
			"methodOrFieldRest", "interfaceBodyDeclaration", "interfaceMemberDecl", 
			"interfaceMethodOrFieldDecl", "interfaceMethodOrFieldRest", "methodDeclaratorRest", 
			"voidMethodDeclaratorRest", "interfaceMethodDeclaratorRest", "voidInterfaceMethodDeclaratorRest", 
			"constructorDeclaratorRest", "qualifiedIdentifierList", "formalParameters", 
			"formalParameter", "methodBody"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'abstract'", "'assert'", "'boolean'", "'break'", "'byte'", 
			"'case'", "'catch'", "'char'", "'class'", "'const'", "'continue'", "'default'", 
			"'do'", "'double'", "'else'", "'extends'", "'final'", "'finally'", "'float'", 
			"'for'", "'goto'", "'if'", "'implements'", "'import'", "'instanceof'", 
			"'int'", "'interface'", "'long'", "'native'", "'new'", "'package'", "'private'", 
			"'protected'", "'public'", "'return'", "'short'", "'static'", "'strictfp'", 
			"'super'", "'switch'", "'synchronized'", "'this'", "'throw'", "'throws'", 
			"'transient'", "'try'", "'void'", "'volatile'", "'while'", "'.'", null, 
			null, null, null, null, "'null'", "'('", "')'", "'{'", "'}'", "'['", 
			"']'", "';'", "','", "'>>>='", "'=='", "'!='", "'<='", "'>='", "'&&'", 
			"'||'", "'++'", "'--'", "'<<'", "'>>'", "'>>>'", "'+='", "'-='", "'*='", 
			"'/='", "'&='", "'|='", "'^='", "'%='", "'<<='", "'>>='", "'='", "'~'", 
			"'<'", "'>'", "'!'", "'?'", "':'", "'+'", "'-'", "'*'", "'/'", "'&'", 
			"'|'", "'^'", "'%'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WhiteSpace", "Comment", "Abstract", "Assert", "Boolean", "Break", 
			"Byte", "Case", "Catch", "Char", "Class", "Const", "Continue", "Default", 
			"Do", "Double", "Else", "Extends", "Final", "Finally", "Float", "For", 
			"Goto", "If", "Implements", "Import", "InstanceOf", "Int", "Interface", 
			"Long", "Native", "New", "Package", "Private", "Protected", "Public", 
			"Return", "Short", "Static", "Strictfp", "Super", "Switch", "Synchronized", 
			"This", "Throw", "Throws", "Transient", "Try", "Void", "Volatile", "While", 
			"Dot", "IntegerLiteral", "FloatingPointLiteral", "CharacterLiteral", 
			"StringLiteral", "BooleanLiteral", "NullLiteral", "ParenthesesLeft", 
			"ParenthesesRight", "CurlyBracketLeft", "CurlyBracketRight", "SquareBracketLeft", 
			"SquareBracketRight", "Semicolon", "Comma", "UnsignedRightShiftAssign", 
			"EqualTo", "NotEqualTo", "LessThanEqualTo", "GreaterThanEqualTo", "ConditionalAND", 
			"ConditionalOR", "Increment", "Decrement", "LeftShift", "SignedRightShift", 
			"UnsignedRightShift", "AddAssign", "SubtractAssign", "MultiplyAssign", 
			"DivideAssign", "BitwiseANDAssign", "BitwiseORAssign", "BitwiseXORAssign", 
			"RemainderAssign", "LeftShiftAssign", "SignedRightShiftAssign", "Assignment", 
			"BitwiseComplement", "LessThan", "GreaterThan", "LogicalComplement", 
			"Question", "Colon", "Addition", "Subtraction", "Multiplication", "Division", 
			"BitwiseAND", "BitwiseOR", "BitwiseXOR", "Remainder", "IDENTIFIER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ExprParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ExprParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgContext extends ParserRuleContext {
		public CompilationUnitContext compilationUnit() {
			return getRuleContext(CompilationUnitContext.class,0);
		}
		public TerminalNode EOF() { return getToken(ExprParser.EOF, 0); }
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(168);
			compilationUnit();
			setState(169);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IdentifierContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(ExprParser.IDENTIFIER, 0); }
		public IdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifier; }
	}

	public final IdentifierContext identifier() throws RecognitionException {
		IdentifierContext _localctx = new IdentifierContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_identifier);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(171);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QualifiedIdentifierContext extends ParserRuleContext {
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public List<TerminalNode> Dot() { return getTokens(ExprParser.Dot); }
		public TerminalNode Dot(int i) {
			return getToken(ExprParser.Dot, i);
		}
		public QualifiedIdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_qualifiedIdentifier; }
	}

	public final QualifiedIdentifierContext qualifiedIdentifier() throws RecognitionException {
		QualifiedIdentifierContext _localctx = new QualifiedIdentifierContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_qualifiedIdentifier);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(173);
			identifier();
			setState(178);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Dot) {
				{
				{
				setState(174);
				match(Dot);
				setState(175);
				identifier();
				}
				}
				setState(180);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LiteralContext extends ParserRuleContext {
		public TerminalNode IntegerLiteral() { return getToken(ExprParser.IntegerLiteral, 0); }
		public TerminalNode FloatingPointLiteral() { return getToken(ExprParser.FloatingPointLiteral, 0); }
		public TerminalNode CharacterLiteral() { return getToken(ExprParser.CharacterLiteral, 0); }
		public TerminalNode StringLiteral() { return getToken(ExprParser.StringLiteral, 0); }
		public TerminalNode BooleanLiteral() { return getToken(ExprParser.BooleanLiteral, 0); }
		public TerminalNode NullLiteral() { return getToken(ExprParser.NullLiteral, 0); }
		public LiteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_literal; }
	}

	public final LiteralContext literal() throws RecognitionException {
		LiteralContext _localctx = new LiteralContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_literal);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(181);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 567453553048682496L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionContext extends ParserRuleContext {
		public UnaryExprContext unaryExpr() {
			return getRuleContext(UnaryExprContext.class,0);
		}
		public AssignmentOperatorContext assignmentOperator() {
			return getRuleContext(AssignmentOperatorContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ConditionalExprContext conditionalExpr() {
			return getRuleContext(ConditionalExprContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_expression);
		try {
			setState(188);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(183);
				unaryExpr();
				setState(184);
				assignmentOperator();
				setState(185);
				expression();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(187);
				conditionalExpr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConditionalExprContext extends ParserRuleContext {
		public LogicalOrExprContext logicalOrExpr() {
			return getRuleContext(LogicalOrExprContext.class,0);
		}
		public TerminalNode Question() { return getToken(ExprParser.Question, 0); }
		public List<ConditionalExprContext> conditionalExpr() {
			return getRuleContexts(ConditionalExprContext.class);
		}
		public ConditionalExprContext conditionalExpr(int i) {
			return getRuleContext(ConditionalExprContext.class,i);
		}
		public TerminalNode Colon() { return getToken(ExprParser.Colon, 0); }
		public ConditionalExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditionalExpr; }
	}

	public final ConditionalExprContext conditionalExpr() throws RecognitionException {
		ConditionalExprContext _localctx = new ConditionalExprContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_conditionalExpr);
		try {
			setState(197);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(190);
				logicalOrExpr();
				setState(191);
				match(Question);
				setState(192);
				conditionalExpr();
				setState(193);
				match(Colon);
				setState(194);
				conditionalExpr();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(196);
				logicalOrExpr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LogicalOrExprContext extends ParserRuleContext {
		public List<LogicalAndExprContext> logicalAndExpr() {
			return getRuleContexts(LogicalAndExprContext.class);
		}
		public LogicalAndExprContext logicalAndExpr(int i) {
			return getRuleContext(LogicalAndExprContext.class,i);
		}
		public List<TerminalNode> ConditionalOR() { return getTokens(ExprParser.ConditionalOR); }
		public TerminalNode ConditionalOR(int i) {
			return getToken(ExprParser.ConditionalOR, i);
		}
		public LogicalOrExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logicalOrExpr; }
	}

	public final LogicalOrExprContext logicalOrExpr() throws RecognitionException {
		LogicalOrExprContext _localctx = new LogicalOrExprContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_logicalOrExpr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(199);
			logicalAndExpr();
			setState(204);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ConditionalOR) {
				{
				{
				setState(200);
				match(ConditionalOR);
				setState(201);
				logicalAndExpr();
				}
				}
				setState(206);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LogicalAndExprContext extends ParserRuleContext {
		public List<EqualityExprContext> equalityExpr() {
			return getRuleContexts(EqualityExprContext.class);
		}
		public EqualityExprContext equalityExpr(int i) {
			return getRuleContext(EqualityExprContext.class,i);
		}
		public List<TerminalNode> ConditionalAND() { return getTokens(ExprParser.ConditionalAND); }
		public TerminalNode ConditionalAND(int i) {
			return getToken(ExprParser.ConditionalAND, i);
		}
		public LogicalAndExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logicalAndExpr; }
	}

	public final LogicalAndExprContext logicalAndExpr() throws RecognitionException {
		LogicalAndExprContext _localctx = new LogicalAndExprContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_logicalAndExpr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(207);
			equalityExpr();
			setState(212);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ConditionalAND) {
				{
				{
				setState(208);
				match(ConditionalAND);
				setState(209);
				equalityExpr();
				}
				}
				setState(214);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EqualityExprContext extends ParserRuleContext {
		public List<RelationalExprContext> relationalExpr() {
			return getRuleContexts(RelationalExprContext.class);
		}
		public RelationalExprContext relationalExpr(int i) {
			return getRuleContext(RelationalExprContext.class,i);
		}
		public List<TerminalNode> EqualTo() { return getTokens(ExprParser.EqualTo); }
		public TerminalNode EqualTo(int i) {
			return getToken(ExprParser.EqualTo, i);
		}
		public List<TerminalNode> NotEqualTo() { return getTokens(ExprParser.NotEqualTo); }
		public TerminalNode NotEqualTo(int i) {
			return getToken(ExprParser.NotEqualTo, i);
		}
		public EqualityExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_equalityExpr; }
	}

	public final EqualityExprContext equalityExpr() throws RecognitionException {
		EqualityExprContext _localctx = new EqualityExprContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_equalityExpr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(215);
			relationalExpr();
			setState(220);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==EqualTo || _la==NotEqualTo) {
				{
				{
				setState(216);
				_la = _input.LA(1);
				if ( !(_la==EqualTo || _la==NotEqualTo) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(217);
				relationalExpr();
				}
				}
				setState(222);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
